basic tours, cities, index and show pages working. Next adding local and federal districts

--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -9,7 +9,7 @@
         <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Municipios</a>
+        <a class="nav-link" href="/cities">Municipios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Distritos</a>
