starting from the ground up, next steps: improve selects Rails_Admin, Devise, Pundit

--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -11,14 +11,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/cities">Municipios</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Distritos</a>
-      </li>
       <li class="nav-item dropdown"><span class="sr-only">(current)</span>
-        <a class="nav-link dropdown-toggle" href="" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Giras</a>
+        <a class="nav-link dropdown-toggle" href="" id="responsiveNavbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Distritos</a>
         <div class="dropdown-menu" aria-labelledby="responsiveNavbarDropdown">
-          <a class="dropdown-item" href="#">Pasadas</a>
-          <a class="dropdown-item" href="#">Próximas</a>
+          <a class="dropdown-item" href="/locals">Locales</a>
+          <a class="dropdown-item" href="/federals">Federales</a>
         </div>
       </li>
       <li class="nav-item">
