--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,13 +1,11 @@
+<% if user_signed_in? %>
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-  <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+  <button class="navbar-toggler hidden-lg-up float-lg-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+  <a class="navbar-brand" href="/"  >
+    <img src="/logopri.svg" width="30" height="30" class="d-inline-block align-top" alt="">CDE Hidalgo
+  </a>
   <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-    <a class="navbar-brand" href="/"  >
-      <img src="/logopri.svg" width="30" height="30" class="d-inline-block align-top" alt="">CDE Hidalgo
-    </a>
     <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="/cities">Municipios</a>
       </li>
@@ -34,4 +32,6 @@
       <% end %>
     </ul>
   </div>
+
+  <% end %>
 </nav>
