Fixing Results table

--- a/app/views/cities/index.html.haml
+++ b/app/views/cities/index.html.haml
@@ -15,7 +15,7 @@
     - @cities.each do |city|
       %tr
         %td= link_to city.nombre, city
-        %td= city.presidente_mpal
+        %td= city.pdte_mpal
         %td= city.prioridad
         %td= city.observaciones
         %td= image_tag city.image.thumb
