--- a/app/views/cities/show.html.haml
+++ b/app/views/cities/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 
 %h1= @city.nombre
-%p= @city.presidente_mpal
+%p= @city.pdte_mpal
 %p= @city.prioridad
 %p= @city.observaciones
 %p= image_tag @city.image, height: "300"
