--- a/app/views/reports/show.html.haml
+++ b/app/views/reports/show.html.haml
@@ -1,8 +1,8 @@
 %p#notice= notice
 
 %h1= @report.nombre
-%p= @report.fecha.strftime("%d-%m-%Y")
-%p= @report.direccion
+%p= @report.fecha
+%p= @report.descripcion
 %p= image_tag @report.image, height: "300"
 
 %h2 Visitas en esta gira
